--- a/Proyecto_Computacion_CuanticaVersion2.ipynb
+++ b/Proyecto_Computacion_CuanticaVersion2.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "0098c2d7",
    "metadata": {},
    "source": [
     "<table>\n",
@@ -24,6 +25,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a7bd86de",
    "metadata": {},
    "source": [
     "# 1. Marco teórico"
@@ -31,6 +33,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c3ac1472",
    "metadata": {},
    "source": [
     "## 1.1 Problema del vendedor ambulante"
@@ -38,6 +41,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "32f91aee",
    "metadata": {},
    "source": [
     "### 1.1.1 Descripción del problmea"
@@ -45,6 +49,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b117855e",
    "metadata": {},
    "source": [
     "El problema del vendedor ambulante o también llamado problema del agente viajero consiste en, dada una distribución de N ciudades, encontrar el camino más corto con el cual se visitan todas las ciudades, con las restricciones de solo poder pasar una vez por cada ciudad y de empezar y acabar el tour en la misma ciudad.\n",
@@ -54,6 +59,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6c07ab27",
    "metadata": {},
    "source": [
     "## 1.2 Algoritmo de Grover"
@@ -61,14 +67,28 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4b10dfa9",
    "metadata": {},
    "source": [
     "# Definición de Grafo"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a9f02ec7-84dc-49dd-b6b7-69bdb9cc8d32",
+   "metadata": {},
+   "source": [
+    "El grafo de las ciudades que utilizaremos es el siguiente:\n",
+    "\n",
+    "<img src=\"https://raw.githubusercontent.com/Andrea585976/Proyecto_Computacion_Cuantica/main/ciudades.png\" width=\"400\" height=\"300\">\n",
+    "\n",
+    "En donde hemos marcado la ruta óptima. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
+   "id": "b484d3bb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,6 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
+   "id": "1c3c5a76",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,6 +300,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
+   "id": "d1b3a9db",
    "metadata": {},
    "outputs": [
     {
@@ -304,6 +326,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "62de881d",
    "metadata": {},
    "source": [
     "# 2. Solución clásica"
@@ -312,6 +335,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
+   "id": "147d3205",
    "metadata": {},
    "outputs": [
     {
@@ -488,6 +512,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d61066c0",
    "metadata": {},
    "source": [
     "# 3. Solución cuántica"
@@ -496,6 +521,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
+   "id": "0acb7faa",
    "metadata": {},
    "outputs": [
     {
@@ -650,6 +676,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f75757dd",
    "metadata": {},
    "source": [
     "**Rutas y distancias**\n",
@@ -660,6 +687,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4876aa94",
    "metadata": {},
    "source": [
     "Posteriormente definimos nuestro oráculo, el cual se encarga marcar la ruta óptima basada en su índice binario."
@@ -667,6 +695,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8162183b",
    "metadata": {},
    "source": [
     "**Grover**\n",
@@ -683,6 +712,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
+   "id": "7a1f8008",
    "metadata": {},
    "outputs": [
     {
@@ -708,6 +738,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "abbbf2b8",
    "metadata": {},
    "source": [
     "# 4. Referencias"
@@ -715,6 +746,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9b1d5789",
    "metadata": {},
    "source": [
     "https://github.com/clausia/cursofi-computacion-cuantica/blob/main/Lab8-Quantum-Annealing.ipynb\n",
@@ -727,9 +759,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ccuantica",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "ccuantica"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -741,7 +773,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
