--- a/Proyecto_Computacion_CuanticaVersion2.ipynb
+++ b/Proyecto_Computacion_CuanticaVersion2.ipynb
@@ -25,6 +25,26 @@
   },
   {
    "cell_type": "markdown",
+   "id": "72e3a74f-03f6-4315-98ff-dd287f2f2553",
+   "metadata": {},
+   "source": [
+    "## Contenido\n",
+    "\n",
+    "1. [Marco teorico](#1)\n",
+    "   1. [Problema del vendedor ambulante](#1.1)\n",
+    "   2. [Algoritmo de Grover](#1.2)\n",
+    "2. [Metodología](#2)\n",
+    "   1. [Enfoque](#2.1)\n",
+    "   2. [Definición del grafo](#2.2)\n",
+    "   3. [Solución clásica](#2.3)\n",
+    "   4. [Solución cuántica](#2.4)\n",
+    "   5. [Solución clásica vs cuántica](#2.5)\n",
+    "3. [Conclusiones](#3)\n",
+    "4. [Referencias](#4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "a7bd86de",
    "metadata": {},
    "source": [
@@ -44,7 +64,7 @@
    "id": "32f91aee",
    "metadata": {},
    "source": [
-    "### 1.1.1 Descripción del problmea"
+    "### 1.1.1 Descripción del problema"
    ]
   },
   {
@@ -52,9 +72,53 @@
    "id": "b117855e",
    "metadata": {},
    "source": [
-    "El problema del vendedor ambulante o también llamado problema del agente viajero consiste en, dada una distribución de N ciudades, encontrar el camino más corto con el cual se visitan todas las ciudades, con las restricciones de solo poder pasar una vez por cada ciudad y de empezar y acabar el tour en la misma ciudad.\n",
+    "El problema del vendedor ambulante o también llamado problema del agente viajero o Traveling Salesman Problem (TSP) consiste en, dada una distribución de N ciudades, encontrar el camino más corto con el cual se visitan todas las ciudades, con las restricciones de solo poder pasar una vez por cada ciudad y de empezar y acabar el tour en la misma ciudad.\n",
     "\n",
-    "Este problema pertenece al tipo de problemas NP-hard, por lo que actualmente no es posible encontrar la solución exacta en un tiempo polinómico."
+    "Este problema pertenece al tipo de problemas NP-hard, por lo que actualmente no es posible encontrar la solución exacta en un tiempo polinómico. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e02b5eba-06f6-48cd-85bf-ec2cbaa9460a",
+   "metadata": {},
+   "source": [
+    "**El problema del ciclo Hamiltoniano**  \n",
+    "El ciclo que visita cada vértice una vez en un grafo y regresa a el vértice inicial es conocido como ciclo Hamiltoniano. El problmea del ciclo Hamiltoniano consiste en, dado un grafo, determina si contiene un ciclo Hamiltoniano o no. \n",
+    "\n",
+    "El problema de ciclo Hamiltoniano es NP-Hard y puede ser transformado a el Problema del Vendedor Viajero, ya que son muy similares. El TSP puede solucionarse encontrando el ciclo Hamiltoniano. \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "696fda67-ad9b-46b6-b735-d206f5d5c5c9",
+   "metadata": {},
+   "source": [
+    "### 1.1.2 Complejidad del TSP"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "64391652-d641-4ea6-b685-55bc8c6749e0",
+   "metadata": {},
+   "source": [
+    "Multiples técnicas son usadas para resolver este problema:\n",
+    "\n",
+    "1. **Método de fuerza bruta**: Encuentra todas las combinaciones posibles de todos los vértices.\n",
+    "$$\n",
+    "O(n\\ !)\\ \\text{where n = Number of vertex/nodes of the graph} \n",
+    "$$\n",
+    "\n",
+    "2. **Programación dinámica**: Divide el problema en problemas más pequeños, calcula esos problemas más pequeños y, cuando es necesario, utiliza el resultado de esos problemas pequeños, en lugar de computar el mismo fragmento una y otra vez.\n",
+    "$$\n",
+    "O(n^22^n)\\ \\text{where n = Number of vertex/nodes of the graph}\n",
+    "$$\n",
+    "\n",
+    "3. **Branch and Bound**: Branch and Bound se refiere a todos los métodos de búsqueda del espacio de estados en los que generamos los hijos de todos los nodos expandidos, antes de convertir cualquier nodo activo en uno expandido. En este método, encontramos el nodo más prometedor y lo ampliamos. El término \"nodo prometedor\" significa \"elegir un nodo que pueda expandirse y brindarnos una solución óptima\". Comenzamos desde la raíz y ampliamos el árbol hasta acercarnos a una solución óptima (costo mínimo en caso de este problema).\n",
+    "$$\n",
+    "O(n^22^n)\\ \\text{where n = Number of vertex/nodes of the graph}\n",
+    "$$\n",
+    "\n",
+    "5. **Enfoque heurístico**: Los enfoques heurísticos se basan en proporcionar un conjunto de reglas para la selección óptima de la próxima ciudad a viajar. Pero esto no proporciona una solución óptima en todos los casos, ya que las heurísticas dan como resultado aproximaciones.\n"
    ]
   },
   {
@@ -67,10 +131,99 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3cd62b3c-77e7-48d0-83c6-c32213b21ecf",
+   "metadata": {},
+   "source": [
+    "El algoritmo de Grover es un algoritmo de búsqueda en una secuencia de datos no ordenada con $N$ elementos y en un tiempo $O\\sqrt{N}$.\n",
+    "\n",
+    "El algoritmo de Grover podríamos verlo como la inversión de una función, es decir, si tenemos una función $y = f(x)$, nos permitiría encontrar de forma más rápida el valor de $x$ cuando tenemos como entrada el valor de $y$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3ac0dfe1-05b0-4d4d-a4cf-61ca4d5ae183",
+   "metadata": {},
+   "source": [
+    "### 1.2.1 Óraculo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "099b3b1e-b12d-46bf-a889-a440d80f70a7",
+   "metadata": {},
+   "source": [
+    "El oráculo del algoritmo de Grover que resulve el problema de búsqueda local corresponde a un bloque que asigna una fase negativa al estado solución, es decir, dejando los demás estados tal y como estaban. Para cualquier estado $\\ket{x}$ de la base computacional, tomando como solución un estado arbitrario $\\ket{w}$, el oráculo vendría dado por\n",
+    "\\begin{align*}\n",
+    "f(x)&=\\ket{x} &\\mbox{ si $x\\neq w$ }\\\\\n",
+    "f(x)&=-\\ket{x} &\\mbox{ si $x=w$}\n",
+    "\\end{align*}\n",
+    "\n",
+    "También se podría expresar de la siguiente manera, siendo $f(x)$ una función que únicamente vale 1 cuando $x$ es igual al estado solución $ω$ y 0 en los demás casos.\n",
+    "\n",
+    "$$ U_w(\\ket{x})=(-1)^{f(x)} \\ket{x} $$\n",
+    "\n",
+    "En resumen, el oráculo se corresponde con una matriz diagonal en la cual la entrada correspondiente al estado $ω$ tendrá una fase negativa. Dependiendo del tipo de problema, la implementación de este bloque puede tener una mayor complejidad, llegando a necesitar qubits extra, también llamados qubits ancilla."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f774b419-20f5-468f-834f-13888802b809",
+   "metadata": {},
+   "source": [
+    "### 1.2.2 Amplificador"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7d4ccff1-ceda-46d8-885b-b9802c5d786c",
+   "metadata": {},
+   "source": [
+    "Otra parte del algoritmo de Grover es el amplicador, difusor, o inversión sobre la media. Viene dado por la expresión\n",
+    "\n",
+    "\\begin{align*}\n",
+    "U_s=H^{\\otimes n} (2\\ket{\\mathbf{0}}\\bra{\\mathbf{0}}-I)H^{\\otimes n}\n",
+    "\\end{align*} \n",
+    "\n",
+    "la cual lo podemos simplificar como\n",
+    "\n",
+    "\\begin{align*}\n",
+    "U_s=2\\ket{s}\\bra{s}-I\n",
+    "\\end{align*}\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "4b10dfa9",
    "metadata": {},
    "source": [
-    "# Definición de Grafo"
+    "## 2. Metodología"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9eeaa0cf-b2c9-4536-a38e-478922d1e79c",
+   "metadata": {},
+   "source": [
+    "### 2.1 Enfoque"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9b0e260f-1475-4a5d-8be5-11c13c716458",
+   "metadata": {},
+   "source": [
+    "Consideraremos todo el problema en términos de grafos. Las ciudades se representan como vértices y el costo/camino como aristas.\n",
+    "\n",
+    "* Cada ciudad está conectada con otras ciudades con un costo específico asociado a cada conexión.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "034f25ef-b93b-429a-9f94-36797681d1ab",
+   "metadata": {},
+   "source": [
+    "### 2.2 Definición del grafo"
    ]
   },
   {
