--- a/Proyecto final.ipynb
+++ b/Proyecto final.ipynb
@@ -53,8 +53,9 @@
     "   3. [Solución clásica](#4.3)\n",
     "   4. [Solución cuántica](#.4)\n",
     "   5. [Solución clásica vs cuántica](#4.5)\n",
-    "5. [Conclusiones](#5)\n",
-    "6. [Referencias](#6)"
+    "5. [Información del sistema de ejecución](#5)\n",
+    "6. [Conclusiones](#6)\n",
+    "7. [Referencias](#7)"
    ]
   },
   {
@@ -562,7 +563,7 @@
    "id": "4d3d9821-6430-46d0-9f2b-81f47f223d3d",
    "metadata": {},
    "source": [
-    "### 3.3 Solución clásica"
+    "### 4.3 Solución clásica"
    ]
   },
   {
@@ -639,7 +640,126 @@
    "id": "e4073d66-3db8-44f4-9273-d6f063c2821a",
    "metadata": {},
    "source": [
-    "### 3. Solución cuántica"
+    "### 4.4 Solución cuántica"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a134dde2-c5b6-4623-98d4-7e5548c155aa",
+   "metadata": {},
+   "source": [
+    "#### 4.4.1 Implementación del Oráculo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5a807fc2-f3d3-4bf9-87b7-a8029c02d76f",
+   "metadata": {},
+   "source": [
+    "En primer lugar, podemos dividir el funcionamiento del oráculo en dos partes. La primera es una\n",
+    "conversión o escalado de las distancias proporcionadas a fases. La segunda parte y más importante\n",
+    "consiste en cómo implementar una función que se encarga de asignar estas fases a cada uno de los\n",
+    "estados cuánticos, los cuales equivalen a los caminos."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c522532b-79a5-4824-b44b-056ac2fe80fd",
+   "metadata": {},
+   "source": [
+    "##### 4.4.1.1 Escalado de distancias"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9722a8c3-78dc-4a5f-97cf-40d3888f4d21",
+   "metadata": {},
+   "source": [
+    "Esta parte consiste en un escalado de las distancias entre cada par de ciudades. Este escalado consiste en, a partir de una matriz que contiene las distancias entre cada par de ciudades, clasificarlas como fase $0$ o fase $\\pi/2$. Para considerar que valor de distancia se le asigna una fase $0$ o de fase $π/2$ , se realiza siguiente procedimiento.\n",
+    "\n",
+    "1. Calcular valor medio en cada fila:\n",
+    "$$\n",
+    "\\beta=\\frac{MAX-MIN}{2}\n",
+    "$$\n",
+    "\n",
+    "2.Establecer rango de distancias asociadas a fase $0$ y fase $π/2$  \n",
+    "$$\n",
+    "[MIN, ,MIN+\\beta]=0    \n",
+    "$$\n",
+    "$$\n",
+    "(MIN+\\beta, MAX]=\\frac{\\pi}{2}\n",
+    "$$\n",
+    "\n",
+    "Este escalado no se hace una vez para la matriz completa, sino que se hace en\n",
+    "cada una de las filas por separado, ya que se ha comprobado que se obtiene un mejor resultado de esta forma. Este proceso se ha implementado mediante la función `escalarMatriz(m)`, a la cual se le pasa como parámetro la matriz de distancias, y devuelve la matriz de fases."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "414d89a5-1016-4039-9439-e5f7a8d3594c",
+   "metadata": {},
+   "source": [
+    "##### 4.4.1.2 Asignación de fases"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9948c7ae-a67e-42dd-b358-402230ca5994",
+   "metadata": {},
+   "source": [
+    "Una vez tenemos la matriz de fases, queda asignar dichas fases a los estados cuánticos. Para ello, se han implementado dos funciones: `coste1q()` y `phasing()`.\n",
+    "\n",
+    "La función `coste1q()` actúa sobre un único qubit y se encarga de dar las fases a y b, que se le pasan como parámetros, a los estados $\\ket{0}$ y $\\ket{1}$ respectivamente. Esta función crea un circuito cuántico de un solo qubit, y mediante dos puertas FASE y una puerta NOT, se les asigna dichas fases a los estados cuánticos. La primera puerta de fase actúa sobre el estado $\\ket{0}$ y la segunda sobre el estado $\\ket{1}$.\n",
+    "\n",
+    "La función `phasing()` se encarga de dar fases a todos los estados que forman el espacio de Hilbert. Esta función crea un circuito más grande, en el que, gracias a la función coste1q(a,b) como puerta condicionada, es posible asignar las fases correspondientes a cada estado.\n",
+    "\n",
+    "Se han utilizado un total de cinco qubits en nuestro circuito, por lo que la función\n",
+    "`coste1q()` como puerta condicionada tendría como qubit destino el qubit 0, y los qubits del 1 al 4 como qubits de control.\n",
+    "\n",
+    "Como, en la matriz escalada, cada enlace entre cada par de ciudades tiene, o bien fase 0, o bien fase $π/2$ , es necesario decidir de qué forma se van a aplicar dichas fases a los estados, para que la fase final de cada uno tenga uno de los valores de fase válidos, los cuales son $[0, π/2 , π, 3π/2]$. Para conseguirlo, solo se han tenido en cuenta los tres primeros pasos de cada camino, ya que con cualquier combinación de fases de la matriz obtendríamos una fase final dentro del rango válido. En cambio, para tener en cuenta todo el camino completo, tendríamos que dividir los caminos en más grupos de fases."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e9dd5965-1772-4bfa-b85e-d2ba402e8e04",
+   "metadata": {},
+   "source": [
+    "#### 4.4.1 Resultados obtenidos"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "728939d2-df3d-4f9b-90fd-ef46c4d54a1e",
+   "metadata": {},
+   "source": [
+    "A partir de la matriz de distancia de ciudades propuestaescribir matriz en markdown\n",
+    "\n",
+    "$$\n",
+    "M =\n",
+    "\\left(\\begin{array}{cc} \n",
+    "0 & 639.58 & 959.34 & 697.95 & 348.29 \\\\\n",
+    "639.58 & 0 & 343.56 & 263.90 & 683.92 \\\\\n",
+    "959.34 & 343.56 & 0 & 320.31 & 917.96 \\\\\n",
+    "697.95 & 263.90 & 320.31 & 0 & 602.47 \\\\\n",
+    "348.29 & 683.92 & 917.96 & 602.47 & 0 \\\\\n",
+    "\\end{array}\\right)\n",
+    "$$ \n",
+    "\n",
+    "Obtenemos la siguiente matriz escalada a fases\n",
+    "\n",
+    "$$\n",
+    "M =\n",
+    "\\left(\\begin{array}{cc} \n",
+    "0 & 0 & \\frac{\\pi}{2} & \\frac{\\pi}{2} & 0 \\\\\n",
+    "\\frac{\\pi}{2} & 0 & 0 & 0 & \\frac{\\pi}{2} \\\\\n",
+    "\\frac{\\pi}{2} & 0 & 0 & 0 & \\frac{\\pi}{2} \\\\\n",
+    "\\frac{\\pi}{2} & 0 & 0 & 0 & \\frac{\\pi}{2} \\\\\n",
+    "0 & \\frac{\\pi}{2} & \\frac{\\pi}{2} & 0 & 0 \\\\\n",
+    "\\end{array}\\right)\n",
+    "$$\n",
+    "\n",
+    "Ahora, procedemos a ejecutar el algoritmo."
    ]
   },
   {
@@ -1129,7 +1249,7 @@
    "id": "13bf1bb2-ce38-472b-8c07-f2d737119ed7",
    "metadata": {},
    "source": [
-    "### 3.4 Solución clásica vs cuántica"
+    "### 4.5 Solución clásica vs cuántica"
    ]
   },
   {
@@ -1151,7 +1271,7 @@
    "id": "95fd539d-6c29-46be-ba3a-79cc60e73096",
    "metadata": {},
    "source": [
-    "# 4. Conlusiones"
+    "# 5. Conlusiones"
    ]
   },
   {
@@ -1173,7 +1293,7 @@
    "id": "395c5acd-45e3-4807-8dee-96d0e18949cd",
    "metadata": {},
    "source": [
-    "# 5. Información del sistema de ejecución\n"
+    "# 6. Información del sistema de ejecución\n"
    ]
   },
   {
@@ -1206,7 +1326,7 @@
    "id": "bba6f158-c7c6-4080-984b-f09450d88b71",
    "metadata": {},
    "source": [
-    "# 6. Referencias "
+    "# 7. Referencias "
    ]
   },
   {
@@ -1234,7 +1354,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.19"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
